--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,26 @@
 {
   "functions": {
     "app/api/**/*.js": {
-      "maxDuration": 30
+      "maxDuration": 10
     }
   },
-
-  "rewrites": [
+  "headers": [
     {
       "source": "/api/(.*)",
-      "destination": "/api/$1"
+      "headers": [
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        },
+        {
+          "key": "Access-Control-Allow-Methods",
+          "value": "GET, POST, PUT, DELETE, OPTIONS"
+        },
+        {
+          "key": "Access-Control-Allow-Headers",
+          "value": "Content-Type, Authorization"
+        }
+      ]
     }
   ]
 }
